# maxent

./: README.md  flake.nix  pyproject.toml
notebooks/: nb.ipynb
notebooks/.ipynb_checkpoints/: nb-checkpoint.ipynb
papers/W1/: W1.org  W1.tex
papers/W2/: W2.org  W2.tex
src/: ising.py
