[project]
name = "maxent"
version = "0.1.0"
description = ""
authors = [
    {name = "Jesse Young Lin",email = "jesseyounglin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
